--- a/index.html
+++ b/index.html
@@ -132,23 +132,43 @@
           <h1>Промокоды</h1>
         </div>
 
-        <div class="reviews-list-wrp">
+        <div class="promo-list-wrp">
           <div class="wrp-cont-rev">
             <div class="wrp-reviews">
               <div class="sale-price-promo-wrp">
                 <div class="sale-price-promo">
                   <p>- 300 грн</p>
                 </div>
-                <div class="sale-text-wrp-promo"> 
+                <div class="sale-text-wrp-promo">
                   <h3>Скидка на все IP WiFi камері</h3>
                   <p>Промокод действует до 14.09.2021</p>
                 </div>
-              </div>   
+              </div>
               <div class="promo-wrp-copy">
                 <button>Скопировать</button>
-                <P>
-                  765Df7900u72Sp
-                </P>
+                <p>765Df7900u72Sp</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="promotions-wrp">
+          <div class="reviews-icon-mob-wrp">
+            <img src="icon/sale_my_orders_icon.svg" alt="товар" />
+            <h1>Акции</h1>
+          </div>
+          <div class="promotion-img">
+            <img src="img/img_orimo_sale.png" alt="Акция" />
+            <div class="promotion-data-wrp">
+              <div class="promotions-data">
+                <p>6 июня — 14 июня</p>
+                <a href="#"
+                  ><p>Скидки на IP камеры до 25%. Установка в подарок!</p>
+                </a>
+              </div>
+              <div>
+                <p>Осталось</p>
+                <p>8</p>
+                <p>дней</p>
               </div>
             </div>
           </div>
