--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                   ><p>Скидки на IP камеры до 25%. Установка в подарок!</p>
                 </a>
               </div>
-              <div>
+              <div class="promotion-days-left">
                 <p>Осталось</p>
-                <p>8</p>
+                <p class="promotion-days-left-text">8</p>
                 <p>дней</p>
               </div>
             </div>
