--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
               </div>
               <div class="promo-wrp-copy">
                 <button>Скопировать</button>
-                <p>765Df7900u72Sp</p>
+                <input class="promo-input-copy" type="text" value="765Df7900u72Sp">
+                
               </div>
             </div>
           </div>
